# SFML_Breakout

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/Breakout/: Constants.h  Game.h  GameObject.h  Scene.h  SharedContext.h
include/Breakout/Entities/: Ball.h  Block.h  BlockManager.h  Paddle.h
include/Breakout/Scenes/: GameClearScene.h  GameOverScene.h  GameScene.h  Scene.h  TitleScene.h
include/Breakout/System/: CollisionManager.h
include/Breakout/UI/: Score.h
src/: Game.cpp  main.cpp
src/Entities/: Ball.cpp  Block.cpp  BlockManager.cpp  Paddle.cpp
src/Scenes/: GameClearScene.cpp  GameOverScene.cpp  GameScene.cpp  TitleScene.cpp
src/System/: CollisionManager.cpp
src/UI/: Score.cpp
